[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-validators"
version = "0.1.0"
description = "Lightweight data reconciliation validators for source-target table parity checks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Recon Validators Team" }
]
dependencies = [
  "jaydebeapi>=1.2.3",
  "JPype1>=1.5.0",
  "pyathena>=3.10.0",
  "boto3==1.37.2",
  "botocore==1.37.2",
  "s3transfer==0.11.3"
]

[tool.setuptools]
packages = ["recon_validators"]

[tool.setuptools.package-dir]
recon_validators = "."
